exo5/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
 name: external-service
spec:
 type: ExternalName
 externalName: api.somecompany.com
 ports:
 - ports: 80
